--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,3 +1,3 @@
 @charset "utf-8";
 @import "~bulma/bulma.sass";
-@import url(https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css);
+@import "~highlight.js/styles/default.css";
